--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "history": "^5.2.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6.0.0-beta.8"
+    "react-router-dom": "6.0.0-beta.8",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^2.2.1",
